--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class= 'half-width'>
             <h1>Welcome To</h1>
             <h1><span class='name-highlight'>Jhanker</span>  Website</h1>
             <h3> World-Class Web Developer</h3>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores reprehenderit excepturi non minus, maxime velit.</h5>
-            <button>Hire Me</button>
+            <a class='link-button'href="#">Hire Me</a>
         </div>
         <div class= 'half-width'>
             <img src="image/jhankar.png" alt="profile pic">
