--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class= 'half-width'>
             <h1>Dream Big</h1>
-            <h1>with <span class='name-highlight'>jhankar</span>  </h1>
+            <h1>with <span class='orange-highlight'>jhankar</span>  </h1>
             <h3> Become A Web Developer</h3>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, molestiae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores reprehenderit excepturi non minus, maxime velit.</h5>
             <a class='link-button'target="_blank" href="#">Download Resume</a>
